; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_integration.c_workshop_frame_moved.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_integration.c_workshop_frame_moved.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sd = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"frameAt %d %d %d %d\0A\00", align 1
@dummy = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @workshop_frame_moved(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [200 x i8], align 16
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i64, i64* @sd, align 8
  %11 = icmp sge i64 %10, 0
  br i1 %11, label %12, label %25

12:                                               ; preds = %4
  %13 = getelementptr inbounds [200 x i8], [200 x i8]* %9, i64 0, i64 0
  %14 = call i32 @NOCATGETS(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @vim_snprintf(i8* %13, i32 200, i32 %14, i32 %15, i32 %16, i32 %17, i32 %18)
  %20 = load i64, i64* @sd, align 8
  %21 = getelementptr inbounds [200 x i8], [200 x i8]* %9, i64 0, i64 0
  %22 = getelementptr inbounds [200 x i8], [200 x i8]* %9, i64 0, i64 0
  %23 = call i32 @strlen(i8* %22)
  %24 = call i32 @write(i64 %20, i8* %21, i32 %23)
  store i32 %24, i32* @dummy, align 4
  br label %25

25:                                               ; preds = %12, %4
  ret void
}

declare dso_local i32 @vim_snprintf(i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @NOCATGETS(i8*) #1

declare dso_local i32 @write(i64, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
